<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_todo"
        android:elevation="4dp"
        android:background="@drawable/logo_background"
        android:padding="25dp" />

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:elevation="4dp"
        android:shadowColor="#30000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/developed_by"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:alpha="0.8" />

</RelativeLayout> 